8219584: Try to dump error file by thread which causes safepoint timeout

Reviewed-by: stuefe, dholmes, kvn